--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /.metadata/
+C5_Frontend/proyecto-final-techtalent/src/image1.jpeg
+C5_Frontend/proyecto-final-techtalent/src/image1.jpeg
+C5_Frontend/proyecto-final-techtalent/src/image2.jpeg
